Fixed image overlap over sidebar on < 768px screen

--- a/src/components/postCard/postCard.module.css
+++ b/src/components/postCard/postCard.module.css
@@ -41,3 +41,15 @@
 .link {
     text-decoration: underline;
 }
+
+@media (max-width: 768px) {
+    .imgContainer {
+        width: 200px;
+        height: 200px;
+    }
+    
+    .date {
+        transform: none;
+        font-size: 20px;
+    }
+}
